# s3-asyncio-client

./: .gitignore  CLAUDE.md  Justfile  README.md  devenv.nix  main.py  mkdocs.yml  pyproject.toml  s3cli.py  setup-github-pages.md
.github/workflows/: docs.yml
docs/: index.md
docs/development/: changelog.md  contributing.md  testing.md
docs/examples/: basic.md  compatible-services.md  multipart.md  presigned-urls.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guide/: advanced-usage.md  basic-operations.md  error-handling.md  performance.md
src/s3_asyncio_client/: __init__.py  auth.py  base.py  buckets.py  cli.py  client.py  exceptions.py  multipart.py  objects.py  urlparsing.py
tests/: conftest.py  test_auth.py  test_bucket_xml.py  test_client.py  test_e2e.py  test_e2e_minio.py  test_exceptions.py  test_from_aws_config.py  test_get_object.py  test_head_object.py  test_list_objects.py  test_multipart.py  test_multipart_xml.py  test_presigned_url.py  test_put_object.py  test_put_object_unit.py
